// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Author Profile test Render the authors profile as expected for a UQ researcher) 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-fam12c-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1194a8g-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
      >
        <div
          aria-label="Photograph of  Professor J Researcher"
          class="MuiAvatar-root MuiAvatar-circular css-n6cucx-MuiAvatar-root"
          title="Professor J Researcher"
        >
          <img
            class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://its-ss-academicportal.s3.amazonaws.com/prod/uqresearchers/photo/thumbnail_14.jpg"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-a5rdam-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-s0bjcf-MuiTypography-root"
                >
                  Professor
                   
                  J
                   
                  Researcher
                </h6>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-is0946-MuiTypography-root"
                >
                  <b>
                    Affiliate Professor
                  </b>
                  , Institute for Molecular Bioscience
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption css-is0946-MuiTypography-root"
                >
                  <b>
                    Affiliate Professorial Res Fellow
                  </b>
                  , School of Chemistry and Molecular Biosciences
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption css-is0946-MuiTypography-root"
                >
                  <b>
                    ARC Australian Laureate Fellow
                  </b>
                  , The University of Queensland Diamantina Institute
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-7ldjcq-MuiGrid-root"
              style="margin-top: 12px;"
            >
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <a
                  class="css-hi05s4"
                  data-analyticsid="researcher-link"
                  data-testid="researcher-link"
                  href="https://www.webofscience.com/wos/author/rid/A-1137-2007"
                  id="researcher-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
                    class="fez-icon researcher ok"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <a
                  class="css-hi05s4"
                  data-analyticsid="scopus-link"
                  data-testid="scopus-link"
                  href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
                  id="scopus-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="Your Scopus ID is 35478294000 - Click to review"
                    class="fez-icon scopus ok"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <a
                  class="css-hi05s4"
                  data-analyticsid="google_scholar-link"
                  data-testid="google_scholar-link"
                  href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
                  id="google_scholar-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
                    class="fez-icon google_scholar ok"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <a
                  class="css-hi05s4"
                  data-analyticsid="orcid-link"
                  data-testid="orcid-link"
                  href="https://orcid.org/0000-0001-1111-1111"
                  id="orcid-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="Your ORCID ID is 0000-0001-1111-1111 - Click to review"
                    class="fez-icon orcid ok"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <a
                  aria-label="Click to visit your ORCID profile"
                  href="https://orcid.org/0000-0001-1111-1111"
                  id="orcid"
                  tabindex="0"
                  target="_blank"
                  title="Click to visit your ORCID profile"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-is0946-MuiTypography-root"
                  >
                     orcid.org/0000-0001-1111-1111
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1qn4t39-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Author Profile test Renders empty div if there is no profile but profile image exists 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-fam12c-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1194a8g-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
      >
        <div
          aria-label="Photograph of    "
          class="MuiAvatar-root MuiAvatar-circular css-n6cucx-MuiAvatar-root"
          title="  "
        >
          <img
            class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://its-ss-academicportal.s3.amazonaws.com/prod/uqresearchers/photo/thumbnail_.jpg"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-a5rdam-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-s0bjcf-MuiTypography-root"
                >
                   
                   
                </h6>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-7ldjcq-MuiGrid-root"
              style="margin-top: 12px;"
            >
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <a
                  class="css-hi05s4"
                  data-analyticsid="researcher-link"
                  data-testid="researcher-link"
                  href="http://guides.library.uq.edu.au/for-researchers/researcher-identifier/researcherid"
                  id="researcher-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="You are not linked to Researcher (ISI) - Click for more information"
                    class="fez-icon researcher error"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <a
                  class="css-hi05s4"
                  data-analyticsid="scopus-link"
                  data-testid="scopus-link"
                  href="http://guides.library.uq.edu.au/for-researchers/researcher-identifier/scopus-authorid"
                  id="scopus-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="You are not linked to Scopus - Click for more information"
                    class="fez-icon scopus error"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <a
                  class="css-hi05s4"
                  data-analyticsid="google_scholar-link"
                  data-testid="google_scholar-link"
                  href="http://guides.library.uq.edu.au/for-researchers/researcher-identifier/google-scholar-profile"
                  id="google_scholar-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="You are not linked to Google Scholar - Click for more information"
                    class="fez-icon google_scholar error"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <a
                  class="css-10b6o39"
                  data-testid="orcid"
                  id="orcid"
                  tabindex="0"
                  title="You are not linked to ORCID - Click for more information"
                >
                  <div
                    class="fez-icon orcid dashboard error"
                    title="You are not linked to ORCID - Click for more information"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1qn4t39-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Author Profile test Renders empty div if there is no profile loaded 1`] = `
<div>
  <div
    class="AuthorProfile empty"
  />
</div>
`;
